kubernetes/external-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-external
  namespace: testbed
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-external
  namespace: testbed
subsets:
  - addresses:
      - ip: 192.168.0.35
    ports:
      - port: 6379
        protocol: TCP
