kubernetes/query-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-api
  namespace: testbed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-api
  template:
    metadata:
      labels:
        app: query-api
    spec:
      hostAliases:
      - ip: "10.43.138.250"
        hostnames:
        - "otel-collector.observability.svc.cluster.local"
      containers:
      - name: query-api
        image: 192.168.0.35:5000/query-api:latest
        ports:
        - containerPort: 8002
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8002
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: "75m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "192Mi"
        volumeMounts:
        - name: db-storage
          mountPath: /data
          readOnly: true
      volumes:
      - name: db-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: query-api
  namespace: testbed
spec:
  selector:
    app: query-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
